# BRiCk

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  CMakeLists.txt  CODEOWNERS  CPP2V_TAG  Dockerfile  LICENSE  LICENSE-LLVM  Makefile  Makefile.coq.local  Makefile.doc  README.md  _CoqProject  _CoqProject.template  coq-cpp2v-bin.install  coq-cpp2v-bin.opam  coq-cpp2v.opam  coq-lens.opam  cpp2v.cpp  dune  dune-project  dune-project.template  dune_config
coq-lens/: .gitignore  LICENSE  README.md  _CoqProject  coq-lens-elpi.opam  coq-lens-tc.opam  coq-lens.opam  dune  dune-project
coq-lens/Lens/: Lens.v  dune
coq-lens/lens/: dune
coq-lens/lens-elpi/: Elpi.v  dune
coq-lens/lens-tc/: dune
coq-lens/test-suite/: Makefile  _CoqProject
coq-lens/tests/: dune  setup-project.sh
coq-upoly/: LICENSE  coq-upoly.opam  dune  dune-project
coq-upoly/upoly/: base.v  dune  id.v  list.v  listT.v  monoid.v  prelude.v  prod.v  reader.v  sum.v  upoly.v  writerT.v
elpi-extra/: .gitignore  LICENSE-BedRock  README.md  dune  dune-project  elpi-extra.opam  grid.ml
elpi-extra/accumulate_bug/: accumulate1.v  accumulate2.v  dune  library.elpi  program.v  test_accumulate_twice.v
elpi-extra/extra/: NES.v  add_predicate_command.v  dune  elpidep.sh  extra.v  prelude.v  reification.v
elpi-extra/tests/: dune  tc_command.v  tc_program.v  tc_tactic.v  tc_tactic_synterp.DISABLED  test.elpi  test_attr.v  test_diag.v  test_ident.v  test_int.v  test_list.v  test_locate_all.v  test_option.v  test_pair.v  test_type_error.v
ltac2-extra/: README.md  dune-project  ltac2-extra.opam
ltac2-extra/plugin/: coqOptions.ml  dune  goalState.ml  intMap.ml  iterators.ml  iterators.mli  misc.ml  structureUtil.ml  tac2constr.ml  tac2constr.mli  tacUtil.ml  tacUtil.mli  warnings.ml
ltac2-extra/tests/: dune  test_constr.v  test_control.v  test_int.v  test_intgraph.v  test_level_env.v
ltac2-extra/theories/: dune  extra.v
ltac2-logger/: README.md  dune  dune-project  ltac2-logger.opam
ltac2-logger/plugin/: coq_output.ml  coq_output.mli  dune  flags.ml  flags.mli  g_ext_flags.mlg  ltac2_format.ml  ltac2_format.mli  main.ml  output.ml
ltac2-logger/theories/: dune  logger.v
ocaml-logger-lib/: LICENSE-BedRock  README.md  dune-project  logger-lib.opam
ocaml-logger-lib/src/: dune  logger.ml  logger.mli
ocaml-rocq-extra/: README.md  dune  dune-project  rocq-extra.opam
ocaml-rocq-extra/src/: dune  extra.ml  extra_msg.ml  extra_pattern.ml  extra_pattern.mli  extra_pp.ml  extra_transparentState.ml
ocaml-stdlib-extra/: README.md  dune-project  stdlib-extra.opam
ocaml-stdlib-extra/src/: JSON.ml  JSON.mli  buffer.ml  buffer.mli  dune  extra.ml  format.ml  format.mli  list.ml  list.mli  prelude.ml  prelude.mli  stream.ml  stream.mli  string.ml  string.mli  time.ml  time.mli
ocaml-swipl/: README.md  dune-project  swipl.opam
ocaml-swipl/c_tests/: Makefile  atoms.c  test.c
ocaml-swipl/src/: atom.ml  atom.mli  c_funcs.ml  c_types.ml  dune  embedding.ml  embedding.mli  frame.ml  frame.mli  functor.ml  get_headers.sh  internal.ml  module.ml  module.mli  pred.ml  pred.mli  query.ml  query.mli  swipl-config.sh  term.ml  term.mli  util.ml  util.sh  versions.ml  versions.mli
ocaml-swipl/tests/: atoms.expected  atoms.ml  cleanup_1.ml  cleanup_2.expected  cleanup_2.ml  dnet_v1.expected  dnet_v1.ml  dnet_v1.pl  dnet_v1_test.expected  dnet_v1_test.pl  dune  initialisation.expected  initialisation.ml  lists.expected  lists.ml  load_prolog.ml  toplevel.expected  toplevel.ml  version_info.expected  version_info.ml
rocq-bluerock-brick/: README.md  dune  dune-project  rocq-bluerock-brick.opam
rocq-bluerock-brick/tests/: dune  setup-name-test.sh
rocq-bluerock-cpp2v/: CMakeLists.txt  Makefile  README.md  dune  dune-project  rocq-bluerock-cpp2v.opam
rocq-bluerock-cpp2v/include/: Assert.hpp  ClangPrinter.hpp  CommentScanner.hpp  CoqPrinter.hpp  Filter.hpp  Formatter.hpp  FromClang.hpp  Location.hpp  Logging.hpp  ModuleBuilder.hpp  OpaqueNames.hpp  SpecCollector.hpp  Template.hpp  ToCoq.hpp  Trace.hpp  Version.hpp  config.hpp
rocq-bluerock-cpp2v/llvm-include/: DeclVisitorWithArgs.h  TypeVisitorWithArgs.h
rocq-bluerock-cpp2v/src/: Assert.cpp  ClangPrinter.cpp  CommentScanner.cpp  Elaborate.cpp  Formatter.cpp  FromClang.cpp  Location.cpp  Logging.cpp  ModuleBuilder.cpp  NotationWriter.cpp  PrePrint.cpp  PrintDecl.cpp  PrintExpr.cpp  PrintLocalDecl.cpp  PrintName.cpp  PrintStmt.cpp  PrintType.cpp  SpecWriter.cpp  StringPrettyPrinter.cpp  Template.cpp  ToCoq.cpp  Version.cpp  cpp2v.cpp
rocq-lens/: README.md  _CoqProject.template  dune  dune-project  rocq-lens-elpi.opam  rocq-lens.opam
rocq-lens/Lens/: Lens.v  dune
rocq-lens/tests/: dune
rocq-tools/: Makefile  README.md  dune-project  rocq-tools.opam
rocq-tools/lib/: JSON.mli  base64.ml  base64.mli  data.ml  data.mli  dune  extra.ml  extra.mli  globfield.ml  globfield.mli  globfs.ml  globfs.mli  log.ml  log.mli  profile.ml  profile.mli  spandata.ml  spandata.mli  zip.ml  zip.mli
rocq-tools/scripts/: csv-summary.sh  (+6 more)
rocq-upoly/: README.md  dune  dune-project  rocq-upoly.opam
tests/: .gitignore  Makefile  Makefile.common  Makefile.coq.local  _CoqProject  _CoqProject.template  code_notation_tests.ref  code_notation_tests.v  conv_int.v  coq.mk  cpp2v-dune-gen.sh  dune  dune-gen.sh  dune.inc  expr_notation_tests.ref  expr_notation_tests.v  include.hpp  include_test.v  logic_tests.ref  logic_tests.v  rules.mk  setup-cpp2v.sh  setup-name-test.sh  setup-project.sh  stmt_notation_tests.ref  stmt_notation_tests.v  test-all.sh  test_static_function_vars.cpp  test_translation_unit_validity_test.v  type_notation_tests.ref  type_notation_tests.v  valcat.hpp  valcat_call.cpp  valcat_of.v  valcat_subscript_xvalue.cpp  virt_cpp_test.v  wp_notation_tests.ref  wp_notation_tests.v
theories/: Ast.v  ChargeCompat.v  ChargeUtil.v  CodeNotations.v  GFunClass.v  HoareSemantics.v  IrisBridge.v  Lens.v  Linking.v  Monoids.v  Parser.v  ProofNotations.v  Sem.v  Signature.v  Util.v  auto.v  avl.v  bytestring.v  dune  traversable.v  util.v
(+2128 files in other folders)
