opam-version: "2.0"
name: "coq-cpp2v"
synopsis: "Frontend and program logic for C++"
maintainer: ["Gregory Malecha <gregory@bedrocksystems.com>"
             "Abhishek Anand <abhishek@bedrocksystems.com>"
             "Gordon Stewart <gordon@bedrocksystems.com>"]
authors: ["Gregory Malecha <gregory@bedrocksystems.com>"
          "Abhishek Anand <abhishek@bedrocksystems.com>"
          "Gordon Stewart <gordon@bedrocksystems.com>"]
homepage: "https://github.com/bedrocksystems/cpp2v"
bug-reports: "https://github.com/bedrocksystems/cpp2v/issues"
dev-repo: "git+https://github.com/bedrocksystems/cpp2v.git"

depends: [
  "coq" { = "8.16.0" }
  "coq-ext-lib" { = "0.11.7" }
  "coq-iris" {(= "dev.2022-11-16.2.da02a192")}
  "elpi" {(= "1.16.7")}
  "coq-elpi" {(= "1.16.0")}
]
version: "vdev"

build: [ make "-j%{jobs}%" "coq" ]
install: [ make "install-coq" ]
