opam-version: "2.0"
name: "coq-cpp2v"
synopsis: "Frontend and program logic for C++"
maintainer: ["Gregory Malecha <gregory@bedrocksystems.com>"
             "Abhishek Anand <abhishek@bedrocksystems.com>"
             "Gordon Stewart <gordon@bedrocksystems.com>"]
authors: ["Gregory Malecha <gregory@bedrocksystems.com>"
          "Abhishek Anand <abhishek@bedrocksystems.com>"
          "Gordon Stewart <gordon@bedrocksystems.com>"]
homepage: "https://github.com/bedrocksystems/cpp2v"
bug-reports: "https://github.com/bedrocksystems/cpp2v/issues"
dev-repo: "git+https://github.com/bedrocksystems/cpp2v.git"

depends: [
  "coq" { >= "8.16.0" & < "8.17~" }
  "coq-ext-lib" { = "0.11.6" }
  "coq-iris" {(= "dev.2022-09-29.0.b335afaf")}
  "elpi" {(= "1.16.8")}
  "coq-elpi" {(= "1.16.0")}
]
version: "vdev"

build: [ make "-j%{jobs}%" "coq" ]
install: [ make "install-coq" ]
