;
; Copyright (C) BedRock Systems Inc. 2022
; All rights reserved.
;
; This software is distributed under the terms of the BedRock Open-Source License.
; See the LICENSE-BedRock file in the repository root for details.

(env
 ; settings for both dev and release mode.
 ; Beware that "_" is really a wildcard rule. Placing rules later gives this error:
 ; > Error: This env stanza contains rules after a wildcard rule. These are going
 ; > to be ignored.
 (_
  (coq
   (flags
    (:standard
      ;see https://gitlab.mpi-sws.org/iris/iris/-/blob/master/_CoqProject
      -w -notation-overridden
      ; Similar to notation warnings.
      -w -custom-entry-overridden
      -w -redundant-canonical-projection
      -w -ambiguous-paths
      ; Turn warning on hints into error:
      -w +deprecated-hint-without-locality
      -w +deprecated-instance-without-locality
      -w +unknown-option
      -w +future-coercion-class-field
 )))))

; Explain Dune how to find and build cpp2v binary
(subdir build
 (env
  (release (env-vars (BUILD_TYPE Release)))
  (_ (env-vars (BUILD_TYPE Debug))))
 (rule
  (targets llvm-lib-path.txt)
  (deps (universe))
  (action
   (with-outputs-to llvm-lib-path.txt
    ; Compute path of the LLVM library. The output looks like one of:
    ; ```
    ; /opt/homebrew/Cellar/llvm/14.0.6/lib/libLLVM-14.dylib
    ; /opt/homebrew/Cellar/llvm@13/13.0.1/lib/libLLVM-13.dylib
    ; /usr/lib/llvm-13/lib/libLLVM-13.so
    ; ```
    ; and changes when upgrading LLVM.
    (pipe-outputs (run llvm-config --libfiles) (run sed "s/ /\\n/g")))))
 (rule
  (targets cpp2v cpp2v-make.log)
  (deps
    ; This code depends on the LLVM library, to try rebuilding `cpp2v` if LLVM
    ; is upgraded.
    ; TODO: Check this is sound — does `cmake` might detect LLVM/Clang in other ways?
    %{read-lines:llvm-lib-path.txt}
    ../Makefile ../Makefile.doc ../CMakeLists.txt (source_tree ../src)
    (source_tree ../cmake) (source_tree ../include) (source_tree ../doc)
    (source_tree ../llvm-include)
    (env_var PATH) (env_var LLVM_DIR) (env_var CLANG_DIR) (env_var BUILD_TYPE))
  (action (run make -j 7 -C .. cpp2v)))
 ; The install rule is also necessary to _use_ cpp2v in other actions
 (install
  (section bin)
  (files cpp2v)
  (package coq-cpp2v-bin)))

(alias (name cpp2v.install) (deps coq-cpp2v-bin.install))
