(lang dune 3.8)
(using coq 0.8)
(name coq-lens)

(generate_opam_files)

(maintainers
 "Gregory Malecha <gregory@bedrocksystems.com>")
(authors
 "Gregory Malecha <gregory@bedrocksystems.com>")
(source (github bedrocksystems/cpp2v))

(package
 (name coq-lens)
 (synopsis "Generation of lenses for record datatypes")
 (depends
  (coq (and (>= 8.13.0) (< 8.19~)))))

(package
 (name coq-lens-tc)
 (synopsis "Generation of lenses for record datatypes")
 (depends
  coq-lens
  (coq (and (>= 8.18.0) (< 8.19~)))
  (coq-metacoq-template (= 1.2.1+8.18))))

(package
 (name coq-lens-elpi)
 (synopsis "Generation of lenses for record datatypes, Elpi backend")
 (depends
  coq-lens
  (coq (and (>= 8.18.0) (< 8.19~)))
  (coq-elpi (= 1.19.3)))) ; We stick to a public version on the package.
