(lang dune 3.14)
(using coq 0.8)
(name coq-lens)

(generate_opam_files)


(maintainers
 "Gregory Malecha <gregory@bluerock.io>"
 "Paolo Giarrusso <paolo@bluerock.io>")
(authors
 "Gregory Malecha <gregory@bluerock.io>"
 "Paolo Giarrusso <paolo@bluerock.io>")

(source (github bedrocksystems/brick))

(package
 (name coq-lens)
 (synopsis "Generation of lenses for record datatypes")
 (depends
  (coq (and (>= 8.13.0) (< 8.20~)))))

;(package
; (name coq-lens-tc)
; (synopsis "Generation of lenses for record datatypes")
; (depends
;  coq-lens
;  (coq (and (>= 8.18.0) (< 8.19~)))
;  (coq-metacoq-template (= 1.2.1+8.18))))

(package
 (name coq-lens-elpi)
 (synopsis "Generation of lenses for record datatypes, Elpi backend")
 (depends
  coq-lens
  (coq (and (>= 8.19.0) (< 8.20~)))
  (elpi (= 1.18.2))
  (coq-elpi (= 2.0.2+bedrock+vanilla-coq)))) ; FIXME this is not a public version.
