(lang dune 3.16)
(using coq 0.8)
(name elpi-extra)

(generate_opam_files)

(maintainers
 "Jan-Oliver Kaiser <janno@bluerock.io>")

(authors
 "David Swasey <david@bluerock.io>")

(license LicenseRef-BedRock)

(source (github bedrocksystems/cpp2v))

(package
 (name elpi-extra)
 (synopsis "Extension of the (Rocq) Elpi standard library")
 (depends coq-stdlib coq-elpi ltac2-extra))
