(env
 (_
  (binaries
   (../rocq-tools/bin/coqc_perf.exe as coqc)
   (../rocq-tools/bin/coqdep_werr.exe as coqdep))
  (flags :standard -warn-error +A -w +A-4-29-40..45-48-58..59-63..65-68-70)
  (ocamlopt_flags :standard -O3 -unbox-closures)
  (coq
   (flags (:standard %{read-lines:../flags/coqc})))))
