;
; Copyright (C) BlueRock Security Inc. 2022-2024
; All rights reserved.
;
; This software is distributed under the terms of the BedRock Open-Source License.
; See the LICENSE-BedRock file in the repository root for details.

(env
 (_
  (binaries
   (../scripts/dummy-gen.awk as dummy-gen))
  (coq
   (flags (:standard %{read-lines:../flags/coqc}))
   (coqdoc_flags %{read-lines:../flags/coqdoc}))))
