(lang dune 3.14)
(using coq 0.8)
(name rocq-bluerock-cpp2v)

(generate_opam_files)

(maintainers
 "Gregory Malecha <gregory@bluerock.io>")
(authors
 "Gregory Malecha <gregory@bluerock.io>"
 "David Swasey"
 "Paolo Giarrusso <paolo@bluerock.io>")
(source (github bedrocksystems/cpp2v))

(package
 (name rocq-bluerock-cpp2v)
 (synopsis "Code generator for BRiCk program logic for C++.")
 (depends
  conf-clang))
