(lang dune 3.16)
(using coq 0.8)
(name rocq-bluerock-cpp2v)

(generate_opam_files)

(maintainers
 "Gregory Malecha <gregory@bluerock.io>")

(authors
 "Gregory Malecha <gregory@bluerock.io>"
 "David Swasey"
 "Paolo Giarrusso <paolo@bluerock.io>")

(license LicenseRef-BedRock)

(source (github bedrocksystems/cpp2v))

(package
 (name rocq-bluerock-cpp2v)
 (synopsis "Code generator for BRiCk program logic for C++")
 (depends
  conf-clang))
