(lang dune 3.14)
(using coq 0.8)
(name rocq-lens)

(generate_opam_files)

(maintainers
 "Gregory Malecha <gregory@bluerock.io>"
 "Paolo Giarrusso <paolo@bluerock.io>")
(authors
 "Gregory Malecha <gregory@bluerock.io>"
 "Paolo Giarrusso <paolo@bluerock.io>")

(source (github bedrocksystems/BRiCk))

(package
 (name rocq-lens)
 (synopsis "Generation of lenses for record datatypes")
 (license BSD-3-Clause)
 (depends
  (coq (>= 8.13.0))))

(package
 (name rocq-lens-elpi)
 (synopsis "Generation of lenses for record datatypes, Elpi backend")
 (license LGPL-2.1-or-later)
 (depends
  rocq-lens
  coq-elpi))
