(env
 (_
  (coq
   (flags
    (:standard
     -w -notation-overridden
     -w +deprecated-hint-without-locality
     -w +deprecated-instance-without-locality
     -w +automatic-prop-lowering
     -w +unknown-option
     -w +future-coercion-class-field))
   (coqdoc_flags
    --toc --toc-depth 2 --interpolate
    --index indexpage --no-lib-name --parse-comments
    --external https://plv.mpi-sws.org/coqdoc/iris/ iris
    --external https://plv.mpi-sws.org/coqdoc/stdpp/ stdpp
    --with-header /tmp/coqdocjs/extra/header.html
    --with-footer /tmp/coqdocjs/extra/footer.html))))
