(lang dune 3.14)
(using coq 0.8)
(name rocq-upoly)

(generate_opam_files)

(license LGPL-2.1-only)

(maintainers
  "David Swasey <david@bluerock.io>"
  "Gregory Malecha <gregory@bluerock.io>"
  "Jan-Oliver Kaiser <janno@bluerock.io>"
  "Rodolphe Lepigre <rodolphe@bluerock.io>")

(authors
  "David Swasey <david@bluerock.io>"
  "Gregory Malecha <gregory@bluerock.io>"
  "Jan-Oliver Kaiser <janno@bluerock.io>"
  "Rodolphe Lepigre <rodolphe@bluerock.io>")

(source (github bedrocksystems/BRiCk))

(package
 (name rocq-upoly)
 (synopsis "Extension to std++ Rocq library for universe polymorphic monads")
 (depends (coq-stdpp (>= dev.2024-02-09.0.cafd7113))))
